<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="nanodegree_apps">"My Nanodegree Apps!"</string>
    <string name="project_spotify_streamer">spotify streamer</string>
    <string name="project_scores_app">scores app</string>
    <string name="project_library_app">library app</string>
    <string name="project_build_it_bigger">build it bigger</string>
    <string name="project_xyz_reader">xyz reader</string>
    <string name="project_capstone">capstone: my own app</string>
</resources>
