<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.test.myappportfolio.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        style="@style/PrimaryTextView"
        android:text="@string/nanodegree_apps" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_spotify_streamer"
                style="@style/PrimaryButton"
                android:text="@string/project_spotify_streamer"/>

            <Button
                android:id="@+id/button_scores_app"
                style="@style/PrimaryButton"
                android:text="@string/project_scores_app" />

            <Button
                android:id="@+id/button_library_app"
                style="@style/PrimaryButton"
                android:text="@string/project_library_app" />

            <Button
                android:id="@+id/button_build_it_bigger"
                style="@style/PrimaryButton"
                android:text="@string/project_build_it_bigger" />

            <Button
                android:id="@+id/button_xyz_reader"
                style="@style/PrimaryButton"
                android:text="@string/project_xyz_reader" />

            <Button
                android:id="@+id/button_capstone"
                style="@style/PrimaryButton"
                android:text="@string/project_capstone" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>